<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:contentDescription="@string/prompt_email"
                android:src="@drawable/ic_joeybag_logo" />

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginStart="4dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email_login"
                    style="@style/TextFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:autofillHints="username"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/password"
                        style="@style/TextFieldStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".80"
                        android:autofillHints="password"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword" />

                    <ImageButton
                        android:id="@+id/eye"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight=".20"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_baseline_remove_red_eye_24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <CheckBox
                        style="@style/TextFieldStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/RememberMe" />

                    <Button
                        android:id="@+id/login_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/action_login" />
                </LinearLayout>

                <Button
                    android:id="@+id/forgot_pwd_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ForgotPassword" />

                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/NewUser" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:text="@string/WaysToSignIn"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sign_in_text_size" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:contentDescription="@string/GoogleIcon"
                    android:scaleType="centerCrop"
                    android:src="@drawable/common_google_signin_btn_text_dark_normal_background" />

                <ImageButton
                    android:id="@+id/fb_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:contentDescription="@string/FbIcon"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_fb_logo" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>