<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/joeybag_web">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="ui.register.RegisterFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_padding"
            android:src="@drawable/ic_joeybag_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/top_padding"
            android:layout_marginEnd="@dimen/fragment_vertical_margin"
            android:ems="10"
            android:hint="@string/FirstName"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/top_padding"
            android:layout_marginEnd="@dimen/fragment_vertical_margin"
            android:ems="10"
            android:hint="@string/LastName"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstname" />

        <EditText
            android:id="@+id/emailaddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/top_padding"
            android:layout_marginEnd="@dimen/fragment_vertical_margin"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastname" />

        <EditText
            android:id="@+id/password_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/top_padding"
            android:layout_marginEnd="@dimen/fragment_vertical_margin"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailaddress" />

        <EditText
            android:id="@+id/password_confirm_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/top_padding"
            android:layout_marginEnd="@dimen/fragment_vertical_margin"
            android:ems="10"
            android:hint="@string/prompt_re_enter_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_register" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/top_padding"
            android:layout_marginEnd="@dimen/fragment_vertical_margin"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_confirm_register" />

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/top_padding"
            android:layout_marginEnd="@dimen/fragment_vertical_margin"
            android:ems="10"
            android:hint="@string/City"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/top_padding"
            android:layout_marginEnd="@dimen/fragment_vertical_margin"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/register_button_align_with_scrollview"
            android:text="@string/action_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address"
            app:layout_constraintVertical_bias="0.0" />

        <!-- app:layout_constraintVertical_bias="0.214" -->

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>



